--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "@vue/cli-service": "^3.11.0",
     "babel-plugin-import": "^1.11.0",
     "postcss-comment": "^2.0.0",
+    "stylus": "^0.54.7",
+    "stylus-loader": "^3.0.2",
     "typescript": "^3.0.0",
     "vue-template-compiler": "^2.6.10"
   },
