安装组件语法提示

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "dependencies": {
     "@dcloudio/uni-app-plus": "^2.0.0-23320190923002",
     "@dcloudio/uni-h5": "^2.0.0-23320190923002",
-    "@dcloudio/uni-helper-json": "*",
+    "@dcloudio/uni-helper-json": "^1.0.2",
     "@dcloudio/uni-mp-alipay": "^2.0.0-23320190923002",
     "@dcloudio/uni-mp-baidu": "^2.0.0-23320190923002",
     "@dcloudio/uni-mp-qq": "^2.0.0-23320190923002",
